# shadowsocks-rust

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Cross-centos.toml  Cross.toml  Dockerfile  Dockerfile.v2ray  LICENSE  Makefile  README.md  appveyor.yml  build-host-release  build.rs  cargo-publish.sh  clippy.toml  deny.toml  domains.toml  proxy.pac  renovate.json  rust-toolchain  rustfmt.toml  socks5_cli.rs  test.md
crates/shadowsocks/: Cargo.toml  README.md
crates/shadowsocks-service/: Cargo.toml  README.md  build.rs
crates/shadowsocks-service/src/: config.rs  lib.rs  utils.rs
crates/shadowsocks-service/src/acl/: mod.rs  sub_domains_tree.rs
crates/shadowsocks-service/src/dns/: mod.rs
crates/shadowsocks-service/src/local/: context.rs  domain_bloacker.rs  mod.rs  utils.rs
crates/shadowsocks-service/src/local/dns/: client_cache.rs  config.rs  dns_resolver.rs  mod.rs  server.rs  upstream.rs
crates/shadowsocks-service/src/local/dns/upstream/: mod.rs  uds.rs
crates/shadowsocks-service/src/local/fake_dns/: manager.rs  mod.rs  processor.rs  proto.rs  server.rs  tcp_server.rs  udp_server.rs
crates/shadowsocks-service/src/local/fake_dns/proto/: fake_dns.proto  mod.rs
crates/shadowsocks-service/src/local/http/: client_cache.rs  config.rs  connector.rs  dispatcher.rs  http_client.rs  http_service.rs  http_stream.rs  mod.rs  server.rs  server_ident.rs  tokio_rt.rs  utils.rs
crates/shadowsocks-service/src/local/http/http_tls/: mod.rs  native_tls.rs  rustls.rs
crates/shadowsocks-service/src/local/loadbalancing/: mod.rs  ping_balancer.rs  server_data.rs  server_stat.rs
crates/shadowsocks-service/src/local/net/: auto_proxy_io.rs  auto_proxy_stream.rs  mod.rs
crates/shadowsocks-service/src/local/net/tcp/: auto_proxy_io.rs  auto_proxy_stream.rs  listener.rs  mod.rs  outbound_proxy.rs
crates/shadowsocks-service/src/local/net/udp/: association.rs  listener.rs  mod.rs
crates/shadowsocks-service/src/local/online_config/: content_encoding.rs  mod.rs
crates/shadowsocks-service/src/local/redir/: mod.rs  redir_ext.rs  server.rs
crates/shadowsocks-service/src/local/redir/sys/: mod.rs
crates/shadowsocks-service/src/local/redir/sys/unix/: bsd_pf.rs  mod.rs  pfvar_bindgen_freebsd.rs  pfvar_bindgen_macos.rs  pfvar_bindgen_openbsd.rs
crates/shadowsocks-service/src/local/redir/tcprelay/: mod.rs
crates/shadowsocks-service/src/local/redir/udprelay/: mod.rs
crates/shadowsocks-service/src/local/redir/udprelay/sys/: mod.rs
crates/shadowsocks-service/src/local/socks/: config.rs  mod.rs  server.rs  socks4.rs  socks4_server.rs  socks5_server.rs
crates/shadowsocks-service/src/local/socks/client/: mod.rs
crates/shadowsocks-service/src/local/socks/client/socks4/: mod.rs  tcp_client.rs
crates/shadowsocks-service/src/local/socks/client/socks5/: mod.rs  tcp_client.rs  udp_client.rs
crates/shadowsocks-service/src/local/socks/server/: mod.rs  server.rs
crates/shadowsocks-service/src/local/socks/server/socks4/: mod.rs  socks4.rs  tcprelay.rs
crates/shadowsocks-service/src/local/socks/server/socks5/: mod.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/local/tun/: async_interface.rs  fake_tun.rs  ip_packet.rs  mod.rs  tcp.rs  udp.rs  virt_device.rs
crates/shadowsocks-service/src/local/tun/sys/: mod.rs  others.rs
crates/shadowsocks-service/src/local/tun/sys/unix/: android.rs  bsd.rs  linux.rs  macos.rs  mod.rs  others.rs
crates/shadowsocks-service/src/local/tun/sys/windows/: mod.rs
crates/shadowsocks-service/src/local/tunnel/: mod.rs  server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/manager/: mod.rs  server.rs
crates/shadowsocks-service/src/net/: flow.rs  http_connect.rs  http_stream.rs  launch_activate_socket.rs  listener.rs  mod.rs  mon_socket.rs  mon_stream.rs  outbound_proxy.rs  packet_window.rs  socks5_client.rs  utils.rs
crates/shadowsocks-service/src/net/outbound/: auth.rs  chain.rs  http_connect.rs  mod.rs  socks5.rs  stream.rs  tls.rs  udp.rs
crates/shadowsocks-service/src/server/: context.rs  mod.rs  server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/sys/: mod.rs
crates/shadowsocks-service/src/sys/unix/: macos.rs  mod.rs
crates/shadowsocks-service/tests/: outbound_ss.rs
crates/shadowsocks-tools/: Cargo.toml
crates/shadowsocks-tools/src/: dns_pressure.rs
crates/shadowsocks/src/: config.rs  context.rs  lib.rs
crates/shadowsocks/src/dns_resolver/: hickory_dns_resolver.rs  mod.rs  resolver.rs  tokio_dns_resolver.rs  trust_dns_resolver.rs
crates/shadowsocks/src/manager/: client.rs  datagram.rs  error.rs  listener.rs  mod.rs  protocol.rs
crates/shadowsocks/src/net/: connect_opt.rs  mod.rs  option.rs  tcp.rs  udp.rs
crates/shadowsocks/src/net/sys/: mod.rs
crates/shadowsocks/src/net/sys/unix/: mod.rs  others.rs  uds.rs
crates/shadowsocks/src/net/sys/unix/bsd/: freebsd.rs  (+3 more)
crates/shadowsocks/src/net/sys/windows/: mod.rs
crates/shadowsocks/src/plugin/: mod.rs  ss_plugin.rs
crates/shadowsocks/src/relay/: mod.rs  socks5.rs
crates/shadowsocks/src/relay/sys/unix/: mod.rs  uds.rs
crates/shadowsocks/src/relay/sys/windows/: mod.rs
crates/shadowsocks/src/relay/tcprelay/: aead.rs  aead_2022.rs  client.rs  crypto_io.rs  mod.rs  proxy_listener.rs  stream.rs  utils.rs
crates/shadowsocks/src/relay/tcprelay/proxy_stream/: client.rs  mod.rs  server.rs  timeout.rs
crates/shadowsocks/src/relay/udprelay/: aead.rs  aead_2022.rs  client.rs  compat.rs  crypto_io.rs  mod.rs  options.rs  proxy_socket.rs  stream.rs
crates/shadowsocks/src/security/: mod.rs
crates/shadowsocks/src/security/replay/: dummy.rs  mod.rs  ppbloom.rs
crates/shadowsocks/tests/: tcp.rs  tcp_tfo.rs  udp.rs
shadowsocks-core/: Cargo.toml  README.md
shadowsocks-core/src/: config.rs  lib.rs
shadowsocks-core/src/relay/: manager.rs
shadowsocks-core/src/relay/dnsrelay/: upstream.rs
shadowsocks-core/src/relay/tcprelay/: local.rs  proxy_stream.rs
shadowsocks-core/src/relay/tcprelay/http_tls/: mod.rs
shadowsocks-core/src/relay/udprelay/: association.rs  client.rs  local.rs  redir_local.rs  server.rs
(+268 files in other folders)
