[package]
name = "shadowsocks-rust"
version = "1.9.0"
authors = ["Shadowsocks Contributors"]
description = "shadowsocks is a fast tunnel proxy that helps you bypass firewalls."
repository = "https://github.com/shadowsocks/shadowsocks-rust"
readme = "README.md"
documentation = "https://docs.rs/shadowsocks"
keywords = ["shadowsocks", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "sslocal"
path = "bin/local.rs"

[[bin]]
name = "ssserver"
path = "bin/server.rs"

[[bin]]
name = "ssurl"
path = "bin/ssurl.rs"

[[bin]]
name = "ssmanager"
path = "bin/manager.rs"

[workspace]
members = [
    "shadowsocks"
]

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"

[features]
default = [
    "trust-dns",
    "local-http",
    "local-http-rustls",
    "local-tunnel",
    "local-socks4"
]
# Uses single-threaded scheduler instead of default multi-threaded
single-threaded = []
# Enables trust-dns for replacing tokio's builtin DNS resolver
trust-dns = ["shadowsocks/trust-dns"]
dns-over-tls = ["shadowsocks/dns-over-tls"]
dns-over-https = ["shadowsocks/dns-over-https"]
# Enable DNS-relay
local-dns = ["shadowsocks/local-dns"]
# Backward compatibility, DO NOT USE
local-dns-relay = ["local-dns"]
# Enable client flow statistic report
# Currently is only used in Android
local-flow-stat = ["shadowsocks/local-flow-stat"]
# Enable HTTP protocol for sslocal
local-http = ["shadowsocks/local-http"]
local-http-native-tls = ["shadowsocks/local-http-native-tls"]
local-http-rustls = ["shadowsocks/local-http-rustls"]
# Enable REDIR protocol for sslocal
# (transparent proxy)
local-redir = ["shadowsocks/local-redir"]
# Enable tunnel protocol for sslocal
local-tunnel = ["shadowsocks/local-tunnel"]
# Enable SOCKS4/4a protocol for sslocal
local-socks4 = ["shadowsocks/local-socks4"]
# Enable jemalloc for binaries
jemalloc = ["jemallocator"]
# Enable bundled tcmalloc
tcmalloc-vendored = ["tcmalloc/bundled"]

[dependencies]
log = "0.4"
log4rs = "0.13"

clap = { version = "2", features = ["wrap_help", "suggestions"] }
cfg-if = "1"
qrcode = { version = "0.12", default-features = false }

futures = "0.3"
tokio = { version = "0.3.1", features = [ "full" ] }

mimalloc = { version = "0.1", optional = true }
tcmalloc = { version = "0.3", optional = true }
jemallocator = { version = "0.3", optional = true }

shadowsocks = { path = "shadowsocks" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.4"

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.8"
byte_string = "1.0"

[patch.crates-io]
h2 = { git = "https://github.com/hyperium/h2.git" }
