[package]
name = "shadowsocks-core"
version = "1.9.0"
authors = ["Shadowsocks Contributors"]
description = "shadowsocks is a fast tunnel proxy that helps you bypass firewalls."
repository = "https://github.com/shadowsocks/shadowsocks-rust"
readme = "README.md"
documentation = "https://docs.rs/shadowsocks-core"
keywords = ["shadowsocks", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = [
    "trust-dns",
]

# Enables trust-dns for replacing tokio's builtin DNS resolver
trust-dns = ["trust-dns-resolver"]
dns-over-tls = ["trust-dns", "trust-dns-resolver/dns-over-rustls"]
dns-over-https = ["trust-dns", "trust-dns-resolver/dns-over-https-rustls"]
# Enable DNS-relay
local-dns = ["trust-dns-proto"]
# Enable client flow statistic report
# Currently is only used in Android
local-flow-stat = []
# Enable HTTP protocol for sslocal
local-http = ["hyper", "http", "tower"]
local-http-native-tls = ["tokio-native-tls", "native-tls"]
local-http-rustls = ["tokio-rustls", "webpki-roots", "rustls-native-certs"]
# Enable REDIR protocol for sslocal
# (transparent proxy)
local-redir = []
# Enable tunnel protocol for sslocal
local-tunnel = []
# Enable SOCKS4/4a protocol for sslocal
local-socks4 = []

[dependencies]
log = "0.4"

rand = "0.7"
libc = "0.2"
bytes = "0.6"
url = "2.2"
regex = "1.4"
cfg-if = "1"
byteorder = "1.3"
byte_string = "1.0"
lazy_static = "1.4"
spin = "0.7"
pin-project = "1.0"
bloomfilter = "1.0.2"
lru_time_cache = "0.11"

futures = "0.3"
async-trait = "0.1"

mio = "0.7"
socket2 = "0.3"
tokio = { version = "0.3.1", features = [ "full" ] }
tokio-native-tls = { version = "0.2", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-rustls = { version = "0.21", optional = true }
webpki-roots = { version = "0.21", optional = true }
rustls-native-certs = { version = "0.5", optional = true }

json5 = "0.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = "0.19"
strum_macros = "0.19"

http = { version = "0.2", optional = true }
# trust-dns-resolver = { version = "0.19", optional = true }
# trust-dns-proto = "0.19"
trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git", optional = true, branch = "upgrade-to-tokio-0.3", features = ["serde-config"] }
trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git", optional = true, branch = "upgrade-to-tokio-0.3" }
hyper = { git = "https://github.com/hyperium/hyper.git", optional = true, features = ["full"] }
tower = { git = "https://github.com/tower-rs/tower.git", optional = true }

ipnet = "2.3"
iprange = "0.6"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
shadowsocks-crypto = { version = "0.1", features = ["ring"] }

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
shadowsocks-crypto = { version = "0.1", features = ["ring"] }

[target.'cfg(not(any(target_arch = "x86", target_arch = "x86_64", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
shadowsocks-crypto = { version = "0.1", features = [] }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock", "winsock2"] }

# Just for the ioctl call macro
[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nix = "0.19"
